Macro/skim/logs/19545448_5.err
input_line_9:2:35: error: expected expression
 FlatMix(5*100000, (5+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                  ^
